--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-plugin-transform-react-jsx": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
-    "electron": "^1.4.15",
+    "electron-compile": "^6.4.1",
     "material-ui": "^0.16.7",
     "node-jsx": "^0.13.3",
     "react": "^15.4.2",
@@ -16,12 +16,49 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "electron": "^1.4.15",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "electron-inspector": "^0.1.4",
+    "electron-prebuilt-compile": "1.4.15",
     "electron-rebuild": "^1.5.7",
     "node-gyp": "^3.5.0",
     "node-pre-gyp": "^0.6.32",
     "scss": "^0.2.4",
     "yargs": "^6.6.0"
+  },
+  "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
+  },
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {},
+      "electronWinstallerConfig": {
+        "name": ""
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": ""
+      }
+    }
   }
 }
