--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "electron-compile": "^6.4.1",
+    "js-yaml": "^3.8.4",
     "material-ui": "^0.16.7",
     "node-jsx": "^0.13.3",
     "react": "^15.4.2",
